--- a/css/main.css
+++ b/css/main.css
@@ -290,8 +290,106 @@ single-work span i.fa,
 .showcase {
     padding-top: 70px;
     padding-bottom: 40px;
-    background-color: #fff;
-    min-height: 800px;
+    background-color: #d8f8ea;
+    min-height: 500px;
+}
+
+.showcase .row {
+    padding-bottom: 50px;
+}
+
+.box {
+    position: relative;
+    perspective: 1000px;
+}
+
+.box img {
+    width: 100%;
+    height: auto;
+    opacity: 1;
+    border: 4px solid #eee5f8;
+    -webkit-border-radius: 8px;
+    -moz-border-radius: 8px;
+    border-radius: 8px;
+    -webkit-box-shadow:  0 15px 20px rgba(0,0,0,0.3);
+    -moz-box-shadow:  0 15px 20px rgba(0,0,0,0.3);
+    box-shadow: 0 15px 20px rgba(0,0,0,0.3);
+    transform: translateY(0) rotateX(0);
+    transition: all 0.6s ease-in-out 0s;
+}
+
+.box:hover img {
+    transform: translateY(-100%) rotateX(90deg);
+    transform-origin: center bottom 0;
+    opacity: 0;
+}
+
+.box .over-layer {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+    -webkit-border-radius: 8px;
+    -moz-border-radius: 8px;
+    border-radius: 8px;
+    background: #333d4b;
+    text-align: center;
+    padding: 0 20px;
+    transition: all 0.60s ease-in-out 0s;
+}
+
+.box:hover .over-layer {
+    opacity: 1;
+}
+
+.box .title,
+.box .description,
+.box .social-links {
+    position: relative;
+    top: 11%;
+    color: #d3d3d3;
+}
+
+.box .title {
+    text-transform: capitalize;
+}
+
+.box .title:after,
+.box .description:after {
+    content: "";
+    width: 50%;
+    display: block;
+    margin: 10px auto 0;
+    border-bottom: 1px solid #fff;
+}
+
+.box .social-links {
+    padding: 0;
+    margin: 0;
+    list-style: none;
+}
+
+.box .social-links li {
+    margin: 10px;
+    display: inline-block;
+}
+
+.box .social-links li a {
+    color: #fff;
+    font-size: 20px;
+}
+
+.box .social-links li a:hover {
+    color: #d3d3d3;
+    text-decoration: none;
+}
+
+@media only screen and (max-width: 990px) {
+    .box {
+        margin-bottom: 20px;
+    }
 }
 
 /*===== contact ====*/
@@ -356,11 +454,11 @@ single-work span i.fa,
 .social-links .fa {
     background: #00a650;
     color: #fff;
-    width: 35px;
-    height: 35px;
+    width: 40px;
+    height: 40px;
     padding-top: 11px;
     text-align: center;
-    border-radius: 50px;
+    border-radius: 50%;
     cursor: pointer;
 }
 
