--- a/css/main.css
+++ b/css/main.css
@@ -5,8 +5,8 @@ body {
 }
 
 p {
-    font-family: 'Open Sans', sans-serif;
-    font-size: 12.5px;
+    font-family: "Microsoft YaHei", "黑体", "宋体", sans-serif;
+    font-size: 13px;
     line-height: 20px;
     font-weight: 100;
 }
@@ -311,9 +311,9 @@ single-work span i.fa,
     -webkit-border-radius: 8px;
     -moz-border-radius: 8px;
     border-radius: 8px;
-    -webkit-box-shadow:  0 15px 20px rgba(0,0,0,0.3);
-    -moz-box-shadow:  0 15px 20px rgba(0,0,0,0.3);
-    box-shadow: 0 15px 20px rgba(0,0,0,0.3);
+    -webkit-box-shadow: 0 15px 20px rgba(0, 0, 0, 0.3);
+    -moz-box-shadow: 0 15px 20px rgba(0, 0, 0, 0.3);
+    box-shadow: 0 15px 20px rgba(0, 0, 0, 0.3);
     transform: translateY(0) rotateX(0);
     transition: all 0.6s ease-in-out 0s;
 }
@@ -350,6 +350,7 @@ single-work span i.fa,
     position: relative;
     top: 11%;
     color: #d3d3d3;
+    letter-spacing: 3px;
 }
 
 .box .title {
@@ -457,6 +458,7 @@ single-work span i.fa,
     width: 40px;
     height: 40px;
     padding-top: 11px;
+    padding-left: 3px;
     text-align: center;
     border-radius: 50%;
     cursor: pointer;
