--- a/css/main.css
+++ b/css/main.css
@@ -401,6 +401,8 @@ single-work span i.fa,
 
 .contact .section-title {
     margin-bottom: 30px;
+    font-family: "Microsoft YaHei", sans-serif;
+    font-weight: 400;
 }
 
 .contact .border {
