--- a/css/main.css
+++ b/css/main.css
@@ -454,6 +454,18 @@ single-work span i.fa,
     margin-bottom: 45px;
 }
 
+.social-links img {
+    -webkit-transition: -webkit-transform 0.5s ease-out;
+    -moz-transition: -moz-transform 0.5s ease-out;
+    transition: transform 0.5s ease-out;
+}
+
+.social-links img:hover {
+    -webkit-transform: rotateZ(360deg);
+    -moz-transform: rotateZ(360deg);
+    transform: rotateZ(360deg);
+}
+
 .social-links .fa {
     background: #00a650;
     color: #fff;
